--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 # Skewed Emacs Dockerfile -
-# Using Debian testing for Emacs 30.1 support.
-FROM debian:testing-slim
+# was using Debian testing for Emacs 30.1 support.
+#FROM debian:testing-slim
+FROM debian:stable-slim
 
 ARG DEBIAN_FRONTEND=noninteractive
 
